--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,31 +38,32 @@
 
   // Add the IDs of extensions you want installed when the container is created.
   "extensions": [
-    "mongodb.mongodb-vscode",
-    "coenraads.bracket-pair-colorizer-2",
-    "hookyqr.beautify",
-    "ms-azuretools.vscode-docker",
-    "digitalbrainstem.javascript-ejs-support",
-    "taodongwu.ejs-snippets",
-    "dsznajder.es7-react-js-snippets",
-    "eamodio.gitlens",
-    "pkosta2005.heroku-command",
-    "ecmel.vscode-html-css",
-    "xabikos.javascriptsnippets",
-    "eg2.vscode-npm-script",
-    "equimper.react-native-react-redux",
-    "ms-vscode-remote.vscode-remote-extensionpack",
-    "shan.code-settings-sync",
-    "thezhir.vscode-snippets",
-    "redhat.vscode-yaml",
-    "mongodb.mongodb-vscode",
-    "ritwickdey.live-sass",
-    "stevencl.adddoccomments",
-    "auchenberg.vscode-browser-preview",
-    "hashicorp.terraform",
-    "markis.code-coverage",
-    "ms-vscode.vscode-typescript-tslint-plugin"
-  ],
+	"mongodb.mongodb-vscode",
+	"coenraads.bracket-pair-colorizer-2",
+	"hookyqr.beautify",
+	"ms-azuretools.vscode-docker",
+	"digitalbrainstem.javascript-ejs-support",
+	"taodongwu.ejs-snippets",
+	"dsznajder.es7-react-js-snippets",
+	"eamodio.gitlens",
+	"pkosta2005.heroku-command",
+	"ecmel.vscode-html-css",
+	"xabikos.javascriptsnippets",
+	"eg2.vscode-npm-script",
+	"equimper.react-native-react-redux",
+	"ms-vscode-remote.vscode-remote-extensionpack",
+	"shan.code-settings-sync",
+	"thezhir.vscode-snippets",
+	"redhat.vscode-yaml",
+	"mongodb.mongodb-vscode",
+	"ritwickdey.live-sass",
+	"stevencl.adddoccomments",
+	"auchenberg.vscode-browser-preview",
+	"hashicorp.terraform",
+	"markis.code-coverage",
+	"ms-vscode.vscode-typescript-tslint-plugin",
+	"PKief.material-icon-theme"
+],
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   "forwardPorts": [80, 27017],
