--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,6 +38,7 @@
 
   // Add the IDs of extensions you want installed when the container is created.
   "extensions": [
+    "Gruntfuggly.todo-tree",
     "mongodb.mongodb-vscode",
     "coenraads.bracket-pair-colorizer-2",
     "hookyqr.beautify",
