--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,15 @@
   "description": "This is a full scale website for students to find fitness instructors.",
   "private": true,
   "dependencies": {
+    "@fullcalendar/react": "^5.11.1",
+    "@fullcalendar/rrule": "^5.11.0",
+    "@fullcalendar/timegrid": "^5.11.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "moment": "^2.29.3",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.2",
