--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ cache: &global_cache
   - &express_cache
     key:
       files:
+        - package.json
         - package-lock.json
     paths:
       - node_modules
@@ -10,6 +11,7 @@ cache: &global_cache
   - &react_cache
     key:
       files:
+        - client/package.json
         - client/package-lock.json
     paths:
       - client/node_modules
