--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is a full scale website for students to find fitness instructors.",
   "main": "app.js",
   "scripts": {
-    "lint": "tslint -c tslint.json -p tsconfig.json",
-    "lint-fix": "tslint -c tslint.json -p tsconfig.json --fix",
+    "lint": "eslint -c .eslintrc.json .",
+    "lint-fix": "eslint --fix .",
     "build": "copyfiles -u 2 'src/views/**/*.ejs' 'dist/views' && tsc",
     "start": "node dist/app.js",
     "client": "npm run dev --prefix client",
@@ -39,12 +39,18 @@
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "babel-jest": "^26.6.0",
     "concurrency": "^0.1.4",
     "concurrently": "^6.2.1",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0-next-6e2f38f3a-20220519",
     "faker": "^5.5.3",
     "jest": "26.6.0",
     "jest-junit": "^12.2.0",
@@ -52,7 +58,6 @@
     "supertest": "^6.1.5",
     "ts-jest": "^26.0.0",
     "ts-node": "^10.2.0",
-    "tslint": "^6.1.3",
     "typescript": "^4.3.5"
   },
   "dependencies": {
