eslint ignore ejs files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
         "mongodb_data",
         "**/dist",
         "**/build",
-        "**/coverage"
+        "**/coverage",
+        "**/*.ejs"
     ],
     "env": {
         "browser": true,
