--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,12 @@
 cache: &global_cache
-    - &express_cache
+    - &npm_cache
       key:
           files:
               - package-lock.json
+              - client/package-lock.json
       paths:
           - node_modules
           - .npm
-      policy: pull
-    - &react_cache
-      key:
-          files:
-              - client/package-lock.json
-      paths:
           - client/node_modules
           - client/.npm
       policy: pull
@@ -63,14 +58,10 @@ tscompile:
         - key:
               files:
                   - package-lock.json
+                  - client/package-lock.json
           paths:
               - node_modules
               - .npm
-          policy: pull-push
-        - key:
-              files:
-                  - client/package-lock.json
-          paths:
               - client/node_modules
               - client/.npm
           policy: pull-push
@@ -167,8 +158,7 @@ cypress_chrome:
     retry: 2
     # parallel: 2
     cache:
-        - *express_cache
-        - *react_cache
+        - *npm_cache
         - *build_cache
         - *cypress_cache
     before_script:
