--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,7 @@
     "@cypress/webpack-dev-server": "^1.4.0",
     "@types/node": "^16.6.1",
     "@types/react": "^17.0.17",
+    "@types/react-calendar": "^3.5.1",
     "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
@@ -72,6 +73,7 @@
     "file-loader": "^6.2.0",
     "fitness-providers": "file:..",
     "react-bootstrap-icons": "^1.8.2",
+    "react-calendar": "^3.7.0",
     "sass": "^1.37.5",
     "ts-loader": "^9.2.9",
     "webpack": "^5.0.0",
