backend live session filtering

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/faker": "^5.5.8",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/mongoose-aggregate-paginate-v2": "^1.0.4",
     "@types/node": "^16.6.1",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
@@ -77,6 +78,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.2",
+    "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.6.3",
     "nodemailer": "^6.7.5",
     "path": "^0.12.7",
