temp patch for node_modules

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "silent-dev": "concurrently \"npm run server\" \"npm run silent-client\"",
     "test": "jest",
-    "coverage": "jest --collectCoverage"
+    "coverage": "jest --collectCoverage",
+    "postinstall": "copyfiles -u 1 node_patch/**/* node_modules"
   },
   "repository": {
     "type": "git",
