--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,9 @@
         "outDir": "dist",
         "baseUrl": ".",
         "paths": {
-            "*": [
-                "node_modules/*"
-            ]
-        }
+            "*": ["node_modules/*"]
+        },
+        "typeRoots": ["node_modules/@types", "src/@types"]
     },
-    "include": [
-        "src/**/*"
-    ]
+    "include": ["src/**/*"]
 }
