--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@fullcalendar/react": "^5.11.1",
     "@fullcalendar/rrule": "^5.11.0",
     "@fullcalendar/timegrid": "^5.11.0",
+    "@googlemaps/js-api-loader": "^1.14.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
