--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -193,7 +193,7 @@ build_dev:
     before_script:
         - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
     script:
-        - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:dev --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL .
+        - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:dev --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL --build-arg GOOGLE_MAP_API=$GOOGLE_MAP_API .
         - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
         - docker push $CI_REGISTRY_IMAGE:dev
     after_script:
@@ -218,7 +218,7 @@ build_staging:
     before_script:
         - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
     script:
-        - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:staging --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL .
+        - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:staging --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL --build-arg GOOGLE_MAP_API=$GOOGLE_MAP_API .
         - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
         - docker push $CI_REGISTRY_IMAGE:staging
     after_script:
@@ -247,7 +247,7 @@ build_branch:
     before_script:
         - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
     script:
-        - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL .
+        - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL --build-arg GOOGLE_MAP_API=$GOOGLE_MAP_API .
         - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH
     after_script:
         - docker logout $CI_REGISTRY
@@ -272,7 +272,7 @@ build_main:
     before_script:
         - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
     script:
-        - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL .
+        - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL --build-arg GOOGLE_MAP_API=$GOOGLE_MAP_API .
         - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
         - docker push $CI_REGISTRY_IMAGE:latest
     after_script:
@@ -297,7 +297,7 @@ build_tags:
     before_script:
         - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
     script:
-        - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL .
+        - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG --build-arg MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL --build-arg GOOGLE_MAP_API=$GOOGLE_MAP_API .
         - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
     after_script:
         - docker logout $CI_REGISTRY
@@ -334,7 +334,7 @@ deploy_main:
         - docker stop $DOCKER_NAME || true
         - docker rm $DOCKER_NAME || true
         - 'PORT=$(curl -s --location --request POST "http://10.0.0.175:5000/add" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "destIP=10.0.0.194" --data-urlencode "branch=$CI_COMMIT_BRANCH" --data-urlencode "subdomain=$SUBDOMAIN" &> /dev/stdout | cut -d ":" -f 4 | cut -d "}" -f 1)'
-        - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e MAIL_HOST=$MAIL_HOST -e MAIL_PORT=$MAIL_PORT -e MAIL_POSTMASTER=$MAIL_POSTMASTER -e MAIL_POSTMASTER_PASSWORD=$MAIL_POSTMASTER_PASSWORD -e MAIL_FROM_EMAIL=$MAIL_FROM_EMAIL -e MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL -e PROVIDER_TYPE=$PROVIDER_TYPE -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
+        - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e MAIL_HOST=$MAIL_HOST -e MAIL_PORT=$MAIL_PORT -e MAIL_POSTMASTER=$MAIL_POSTMASTER -e MAIL_POSTMASTER_PASSWORD=$MAIL_POSTMASTER_PASSWORD -e MAIL_FROM_EMAIL=$MAIL_FROM_EMAIL -e MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL -e GOOGLE_MAP_API=$GOOGLE_MAP_API -e GOOGLE_PLACE_API=$GOOGLE_PLACE_API -e PROVIDER_TYPE=$PROVIDER_TYPE -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
     after_script:
         - docker logout $CI_REGISTRY
 
@@ -395,7 +395,7 @@ deploy_staging:
         - docker stop $DOCKER_NAME || true
         - docker rm $DOCKER_NAME || true
         - 'PORT=$(curl -s --location --request POST "http://10.0.0.175:5000/add" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "destIP=10.0.0.194" --data-urlencode "branch=$CI_COMMIT_BRANCH" --data-urlencode "subdomain=$SUBDOMAIN" &> /dev/stdout | cut -d ":" -f 4 | cut -d "}" -f 1)'
-        - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e MAIL_HOST=$MAIL_HOST -e MAIL_PORT=$MAIL_PORT -e MAIL_POSTMASTER=$MAIL_POSTMASTER -e MAIL_POSTMASTER_PASSWORD=$MAIL_POSTMASTER_PASSWORD -e MAIL_FROM_EMAIL=$MAIL_FROM_EMAIL -e MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL -e PROVIDER_TYPE=$PROVIDER_TYPE -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
+        - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e MAIL_HOST=$MAIL_HOST -e MAIL_PORT=$MAIL_PORT -e MAIL_POSTMASTER=$MAIL_POSTMASTER -e MAIL_POSTMASTER_PASSWORD=$MAIL_POSTMASTER_PASSWORD -e MAIL_FROM_EMAIL=$MAIL_FROM_EMAIL -e MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL  -e GOOGLE_MAP_API=$GOOGLE_MAP_API -e GOOGLE_PLACE_API=$GOOGLE_PLACE_API -e PROVIDER_TYPE=$PROVIDER_TYPE -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
     after_script:
         - docker logout $CI_REGISTRY
 
@@ -455,7 +455,7 @@ deploy_dev:
         - docker stop $DOCKER_NAME || true
         - docker rm $DOCKER_NAME || true
         - 'PORT=$(curl -s --location --request POST "http://10.0.0.175:5000/add" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "destIP=10.0.0.194" --data-urlencode "branch=$CI_COMMIT_BRANCH" --data-urlencode "subdomain=$SUBDOMAIN" &> /dev/stdout | cut -d ":" -f 4 | cut -d "}" -f 1)'
-        - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e MAIL_HOST=$MAIL_HOST -e MAIL_PORT=$MAIL_PORT -e MAIL_POSTMASTER=$MAIL_POSTMASTER -e MAIL_POSTMASTER_PASSWORD=$MAIL_POSTMASTER_PASSWORD -e MAIL_FROM_EMAIL=$MAIL_FROM_EMAIL -e MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL -e PROVIDER_TYPE=$PROVIDER_TYPE -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
+        - docker run -d --name $DOCKER_NAME --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e MAIL_HOST=$MAIL_HOST -e MAIL_PORT=$MAIL_PORT -e MAIL_POSTMASTER=$MAIL_POSTMASTER -e MAIL_POSTMASTER_PASSWORD=$MAIL_POSTMASTER_PASSWORD -e MAIL_FROM_EMAIL=$MAIL_FROM_EMAIL -e MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL -e GOOGLE_MAP_API=$GOOGLE_MAP_API -e GOOGLE_PLACE_API=$GOOGLE_PLACE_API -e PROVIDER_TYPE=$PROVIDER_TYPE -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
     after_script:
         - docker logout $CI_REGISTRY
 
@@ -524,7 +524,7 @@ deploy_branch:
         #Get the subdomain substring from the environment url
         - SUBDOMAIN=$(echo $ENVIRONMENT_URL | cut -d "/" -f 3 | cut -d "." -f 1)
         #Create the docker container
-        - docker run -d --name fitness-$CI_COMMIT_BRANCH --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e MAIL_HOST=$MAIL_HOST -e MAIL_PORT=$MAIL_PORT -e MAIL_POSTMASTER=$MAIL_POSTMASTER -e MAIL_POSTMASTER_PASSWORD=$MAIL_POSTMASTER_PASSWORD -e MAIL_FROM_EMAIL=$MAIL_FROM_EMAIL -e MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL -e PROVIDER_TYPE=$PROVIDER_TYPE -e HTTPS=true -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
+        - docker run -d --name fitness-$CI_COMMIT_BRANCH --net="bridge" -p $PORT:$CONTAINER_PORT -e DOMAIN="$SUBDOMAIN.duraken.com" -e MAIL_HOST=$MAIL_HOST -e MAIL_PORT=$MAIL_PORT -e MAIL_POSTMASTER=$MAIL_POSTMASTER -e MAIL_POSTMASTER_PASSWORD=$MAIL_POSTMASTER_PASSWORD -e MAIL_FROM_EMAIL=$MAIL_FROM_EMAIL -e MAIL_CONTACT_EMAIL=$MAIL_CONTACT_EMAIL -e GOOGLE_MAP_API=$GOOGLE_MAP_API -e GOOGLE_PLACE_API=$GOOGLE_PLACE_API -e PROVIDER_TYPE=$PROVIDER_TYPE -e HTTPS=true -e DB_USERNAME=$DB_USERNAME -e DB_PASSWORD=$DB_PASSWORD -e DB_AUTHSOURCE=$DB_AUTHSOURCE -e DB_IP=$DB_IP -e DB_PORT=$DB_PORT -e DB_NAME=$DB_NAME -e SECRET=$SECRET -e REFRESH_TOKEN_SECRET=$REFRESH_TOKEN_SECRET -e ACCESS_TOKEN_SECRET=$ACCESS_TOKEN_SECRET $CI_REGISTRY_IMAGE:$IMAGE_TAG
     after_script:
         - docker logout $CI_REGISTRY
     artifacts:
