--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose-aggregate-paginate-v2": "^1.0.4",
     "@types/node": "^16.6.1",
+    "@types/node-fetch": "^2.6.1",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
@@ -81,6 +82,7 @@
     "mongoose": "^6.3.2",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.6.3",
+    "node-fetch": "^2.6.6",
     "nodemailer": "^6.7.5",
     "path": "^0.12.7",
     "validator": "^10.11.0"
