--- a/.env-sample
+++ b/.env-sample
@@ -13,6 +13,10 @@ DB_AUTHSOURCE=admin
 DB_IP=localhost
 DB_PORT=27017
 DB_NAME=fitness-cypress
+S3_ACCESS_KEY=
+S3_SECRET_KEY=
+S3_ENDPOINT=http://127.0.0.1:9000
+S3_BUCKET=fitness
 SECRET=PLEASECHANGE2LONG&RANDOMSECRET
 REFRESH_TOKEN_SECRET=ANOTHERSECRETCHANEME
 ACCESS_TOKEN_SECRET=ANOTHERLONGSECRETPLEASECHANGE
