--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose-aggregate-paginate-v2": "^1.0.4",
-    "@types/node": "^16.6.1",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^16.11.36",
     "@types/node-fetch": "^2.6.1",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
@@ -63,6 +64,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "aws-sdk": "^2.1143.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
@@ -82,6 +84,7 @@
     "mongoose": "^6.3.2",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.6.3",
+    "multer": "^1.4.4",
     "node-fetch": "^2.6.6",
     "nodemailer": "^6.7.5",
     "path": "^0.12.7",
