--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "silent-dev": "concurrently \"npm run server\" \"npm run silent-client\"",
     "test": "jest",
-    "coverage": "jest --collectCoverage",
-    "postinstall": "copyfiles -u 1 'node_patch/**/*' 'node_modules'"
+    "coverage": "jest --collectCoverage"
   },
   "repository": {
     "type": "git",
@@ -36,7 +35,7 @@
     "@types/faker": "^5.5.8",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
-    "@types/mongoose-aggregate-paginate-v2": "^1.0.4",
+    "@types/mongoose-aggregate-paginate-v2": "^1.0.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.36",
     "@types/node-fetch": "^2.6.1",
@@ -48,6 +47,7 @@
     "babel-jest": "^26.6.0",
     "concurrency": "^0.1.4",
     "concurrently": "^6.2.1",
+    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
@@ -71,7 +71,6 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
-    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
