--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
         container_name: fitness
         ports:
             - 80:80
-        environment: # TODO: update with latest env
+        environment:
+            TZ: America/Detroit
             BASE_URL: http://localhost
             API_URL: /api/v1
             MAIL_HOST: smtp.mailgun.org
@@ -19,6 +20,8 @@ services:
             MAIL_POSTMASTER_PASSWORD: YOUR_PASSWORD
             MAIL_FROM_EMAIL: noreply@fitnessproviders.net
             MAIL_CONTACT_EMAIL: contact@fitnessproviders.net
+            GOOGLE_PLACE_API: YOUR_API_KEY
+            GOOGLE_MAP_API: YOUR_API_KEY
             PROVIDER_TYPE: fitness
             DB_USERNAME: root
             DB_PASSWORD: rootpassword
@@ -26,10 +29,15 @@ services:
             DB_IP: mongo
             DB_PORT: 27017
             DB_COLLECTION: fitness_local
+            S3_ACCESS_KEY: YOUR_ACCESS_KEY
+            S3_SECRET_KEY: YOUR_SECRET
+            S3_ENDPOINT: ENDPOINT_IF_NOT_AWS
+            S3_BUCKET: YOUR_BUCKET
             SECRET: PLEASECHANGE2LONG&RANDOMSECRET
             REFRESH_TOKEN_SECRET: PLEASECHANGE2LONG&RANDOMSECRET
             ACCESS_TOKEN_SECRET: PLEASECHANGE2LONG&RANDOMSECRET
             PORT: 80
+            CI: false
 
     mongo:
         image: mongo:latest
