--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,5 @@
 {
+    "extends": ["config:base"],
     "packageRules": [{
             "paths": ["client/package.json"],
             "labels": ["Frontend", "Renovate"]
@@ -7,5 +8,7 @@
             "paths": ["package.json"],
             "labels": ["Backend", "Renovate"]
         }
-    ]
+    ],
+    "baseBranches": ["dev"],
+    "rangeStrategy": "bump"
 }
