ci: no build/deploy on renovate branches

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -242,6 +242,7 @@ build_branch:
         - staging
         - dev
         - tags
+        - renovate/*
     services:
         - docker:dind
     before_script:
@@ -504,6 +505,7 @@ deploy_branch:
         - staging
         - dev
         - tags
+        - renovate/*
     before_script:
         #Download curl
         - apk add --update curl && rm -rf /var/cache/apk/*
@@ -556,6 +558,7 @@ stop_branch:
         - staging
         - dev
         - tags
+        - renovate/*
     when: manual
     cache: []
     before_script:
