--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.3.2",
+    "react-toastify": "^9.0.3",
     "tailwindcss": "^2.2.19",
     "web-vitals": "^2.1.4"
   },
