--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node-fetch": "^2.6.1",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
@@ -87,6 +88,7 @@
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.5",
     "path": "^0.12.7",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0"
   }
 }
