--- a/client/package.json
+++ b/client/package.json
@@ -79,6 +79,7 @@
     "sass": "^1.52.2",
     "ts-loader": "^9.3.0",
     "webpack": "^5.73.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-bundle-tracker": "^1.5.0",
     "webpack-cli": "^4.9.2"
   }
