progress on implementing paypal subscriptions

--- a/.env-sample
+++ b/.env-sample
@@ -18,6 +18,9 @@ S3_ACCESS_KEY=
 S3_SECRET_KEY=
 S3_ENDPOINT=http://127.0.0.1:9000
 S3_BUCKET=fitness
+PAYPAL_PLAN_ID=P-3WC46346XF468861MMKRIICA
+PAYPAL_CLIENT_ID=AeGn18aOdReD0GFOdd5G6MObKqQoj_yn5gpKBH2X9mKLEel8ALJP74itECuP4_kVLk063C6dBA1kLbDs
+PAYPAL_SECRET=YOURSECRET
 SECRET=PLEASECHANGE2LONG&RANDOMSECRET
 REFRESH_TOKEN_SECRET=ANOTHERSECRETCHANEME
 ACCESS_TOKEN_SECRET=ANOTHERLONGSECRETPLEASECHANGE
