--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@fullcalendar/rrule": "^5.11.0",
     "@fullcalendar/timegrid": "^5.11.0",
     "@googlemaps/js-api-loader": "^1.14.3",
+    "@paypal/paypal-js": "^5.0.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
