--- a/Infrastructure/terraform/credentials.auto.tfvars.example
+++ b/Infrastructure/terraform/credentials.auto.tfvars.example
@@ -2,3 +2,12 @@ LINODE_TOKEN = ""
 KUBE_CONFIG_PATH = "~/.kube/config"
 EMAIL = ""
 CLOUDFLARE_API_KEY = ""
+CLOUDFLARE_ZONE_ID = ""
+DOMAIN = ""
+REGISTRY_SERVER = ""
+REGISTRY_USERNAME = ""
+REGISTRY_PASSWORD = ""
+MINIO_ACCESS_KEY = ""
+MINIO_SECRET_KEY = ""
+MONGO_USERNAME = ""
+MONGO_PASSWORD = ""
