--- a/Infrastructure/terraform/credentials.auto.tfvars.example
+++ b/Infrastructure/terraform/credentials.auto.tfvars.example
@@ -1,13 +1,34 @@
 LINODE_TOKEN = ""
 KUBE_CONFIG_PATH = "~/.kube/config"
-EMAIL = ""
+CLOUDFLARE_EMAIL = "youremail@gmail.com"
 CLOUDFLARE_API_KEY = ""
 CLOUDFLARE_ZONE_ID = ""
-DOMAIN = ""
-REGISTRY_SERVER = ""
+REGISTRY_SERVER = "gitlab.com"
 REGISTRY_USERNAME = ""
 REGISTRY_PASSWORD = ""
-MINIO_ACCESS_KEY = ""
-MINIO_SECRET_KEY = ""
-MONGO_USERNAME = ""
-MONGO_PASSWORD = ""
+DOMAIN = "yourdomain.com"
+S3_ACCESS_KEY = ""
+S3_SECRET_KEY = ""
+MAIL_HOST = "smtp.mailgun.org"
+MAIL_PORT = "465"
+MAIL_POSTMASTER = "postmaster@yourdomain.com"
+MAIL_POSTMASTER_PASSWORD = ""
+MAIL_FROM_EMAIL = "noreply@yourdomain.com"
+MAIL_CONTACT_EMAIL = "contact@yourdomain.com"
+GOOGLE_MAP_API = ""
+GOOGLE_PLACE_API = ""
+PROVIDER_TYPE = "fitness"
+DB_USERNAME = ""
+DB_PASSWORD = ""
+DB_AUTHSOURCE = "admin"
+DB_IP = "" 
+DB_PORT = "27017"
+DB_NAME = "fitness-providers"
+SECRET = ""
+REFRESH_TOKEN_SECRET = ""
+ACCESS_TOKEN_SECRET = ""
+S3_ENDPOINT = ""
+S3_BUCKET = "fitness"
+BASE_URL = "https://yourdomain.com"
+API_URL = "/api/v1"
+TZ = "America/Detroit"
