--- a/Infrastructure/terraform/credentials.auto.tfvars.example
+++ b/Infrastructure/terraform/credentials.auto.tfvars.example
@@ -1,3 +1,7 @@
+MONGO_VOLUME_SIZE = "8Gi"
+MONGO_REPLICA_COUNT = 3
+MINIO_VOLUME_SIZE = "8Gi"
+MINIO_REPLICA_COUNT = 3
 LINODE_TOKEN = ""
 KUBE_CONFIG_PATH = "~/.kube/config"
 CLOUDFLARE_EMAIL = "youremail@gmail.com"
