--- a/Infrastructure/terraform/credentials.auto.tfvars.example
+++ b/Infrastructure/terraform/credentials.auto.tfvars.example
@@ -1,13 +1,16 @@
-MONGO_VOLUME_SIZE = "8Gi"
+FITNESS_REPLICA_COUNT = 3
+MONGO_VOLUME_SIZE = "10Gi"
 MONGO_REPLICA_COUNT = 2
-MINIO_VOLUME_SIZE = "8Gi"
-MINIO_REPLICA_COUNT = 2
+MINIO_VOLUME_SIZE = "10Gi"
+MINIO_REPLICA_COUNT = 1 # Must equal 1 or >= 4
+MINIO_RAM_SIZE = "512Mi"
 LINODE_TOKEN = ""
 KUBE_CONFIG_PATH = "~/.kube/config"
 CLOUDFLARE_EMAIL = "youremail@gmail.com"
 CLOUDFLARE_API_KEY = ""
 CLOUDFLARE_ZONE_ID = ""
-REGISTRY_SERVER = "gitlab.com"
+REGISTRY_SERVER = "https://gitlab.com"
+REGISTRY_CONTAINER = "gitlab.com/fitness-providers/fitness-providers:latest"
 REGISTRY_USERNAME = ""
 REGISTRY_PASSWORD = ""
 DOMAIN = "yourdomain.com"
@@ -22,16 +25,11 @@ MAIL_CONTACT_EMAIL = "contact@yourdomain.com"
 GOOGLE_MAP_API = ""
 GOOGLE_PLACE_API = ""
 PROVIDER_TYPE = "fitness"
-DB_USERNAME = ""
-DB_PASSWORD = ""
-DB_AUTHSOURCE = "admin"
-DB_IP = "" 
-DB_PORT = "27017"
-DB_NAME = "fitness-providers"
+DB_CONNECTION_STRING = "mongodb://<username>:<password>@mongodb-0.mongodb-headless.fitness.svc.cluster.local:27017,mongodb-1.mongodb-headless.fitness.svc.cluster.local:27017/fitness-providers"
 SECRET = ""
 REFRESH_TOKEN_SECRET = ""
 ACCESS_TOKEN_SECRET = ""
-S3_ENDPOINT = ""
+S3_ENDPOINT = "s3.yourdomain.com"
 S3_BUCKET = "fitness"
 BASE_URL = "https://yourdomain.com"
 API_URL = "/api/v1"
