ci: paypal vars

--- a/.env-sample
+++ b/.env-sample
@@ -18,6 +18,7 @@ S3_ACCESS_KEY=
 S3_SECRET_KEY=
 S3_ENDPOINT=http://127.0.0.1:9000
 S3_BUCKET=fitness
+PAYPAL_API_URL=https://api-m.sandbox.paypal.com/v1
 PAYPAL_PLAN_ID=P-3WC46346XF468861MMKRIICA
 PAYPAL_CLIENT_ID=AeGn18aOdReD0GFOdd5G6MObKqQoj_yn5gpKBH2X9mKLEel8ALJP74itECuP4_kVLk063C6dBA1kLbDs
 PAYPAL_SECRET=YOURSECRET
