--- a/Infrastructure/terraform/credentials.auto.tfvars.example
+++ b/Infrastructure/terraform/credentials.auto.tfvars.example
@@ -1,9 +1,9 @@
+LETS_ENCRYPT_STAGING = false
 FITNESS_REPLICA_COUNT = 3
 MONGO_VOLUME_SIZE = "10Gi"
 MONGO_REPLICA_COUNT = 2
 MINIO_VOLUME_SIZE = "10Gi"
 MINIO_REPLICA_COUNT = 1 # Must equal 1 or >= 4
-MINIO_RAM_SIZE = "512Mi"
 LINODE_TOKEN = ""
 KUBE_CONFIG_PATH = "~/.kube/config"
 CLOUDFLARE_EMAIL = "youremail@gmail.com"
