--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -209,6 +209,7 @@ build_staging:
         <<: *global_variables
         DOCKER_DRIVER: overlay2
         DOCKER_TLS_CERTDIR: "/certs"
+        DEMO: "true"
     tags:
         - docker
         - amd64
