tf: registry email

--- a/Infrastructure/terraform/credentials.auto.tfvars.example
+++ b/Infrastructure/terraform/credentials.auto.tfvars.example
@@ -11,6 +11,7 @@ CLOUDFLARE_API_KEY = ""
 CLOUDFLARE_ZONE_ID = ""
 REGISTRY_SERVER = "https://gitlab.com"
 REGISTRY_CONTAINER = "gitlab.com/fitness-providers/fitness-providers:latest"
+REGISTRY_EMAIL = ""
 REGISTRY_USERNAME = ""
 REGISTRY_PASSWORD = ""
 DOMAIN = "yourdomain.com"
