--- a/Infrastructure/terraform/credentials.auto.tfvars.example
+++ b/Infrastructure/terraform/credentials.auto.tfvars.example
@@ -15,6 +15,7 @@ REGISTRY_EMAIL = ""
 REGISTRY_USERNAME = ""
 REGISTRY_PASSWORD = ""
 DOMAIN = "yourdomain.com"
+DEMO = "false"
 S3_ACCESS_KEY = ""
 S3_SECRET_KEY = ""
 MAIL_HOST = "smtp.mailgun.org"
