tf: auth source for mongo uri

--- a/Infrastructure/terraform/credentials.auto.tfvars.example
+++ b/Infrastructure/terraform/credentials.auto.tfvars.example
@@ -27,7 +27,7 @@ MAIL_CONTACT_EMAIL = "contact@yourdomain.com"
 GOOGLE_MAP_API = ""
 GOOGLE_PLACE_API = ""
 PROVIDER_TYPE = "fitness"
-DB_CONNECTION_STRING = "mongodb://<username>:<password>@mongodb-0.mongodb-headless.fitness.svc.cluster.local:27017,mongodb-1.mongodb-headless.fitness.svc.cluster.local:27017/fitness-providers"
+DB_CONNECTION_STRING = "mongodb://<username>:<password>@mongodb-0.mongodb-headless.fitness.svc.cluster.local:27017,mongodb-1.mongodb-headless.fitness.svc.cluster.local:27017/fitness-providers?authSource=admin"
 SECRET = ""
 REFRESH_TOKEN_SECRET = ""
 ACCESS_TOKEN_SECRET = ""
