tf: seperate domains for minio api and dashboard

--- a/Infrastructure/terraform/credentials.auto.tfvars.example
+++ b/Infrastructure/terraform/credentials.auto.tfvars.example
@@ -31,7 +31,8 @@ DB_CONNECTION_STRING = "mongodb://<username>:<password>@mongodb-0.mongodb-headle
 SECRET = ""
 REFRESH_TOKEN_SECRET = ""
 ACCESS_TOKEN_SECRET = ""
-S3_ENDPOINT = "s3.yourdomain.com"
+S3_DASHBOARD_ENDPOINT = "minio.yourdomain.com"
+S3_ENDPOINT = "image.yourdomain.com"
 S3_BUCKET = "fitness"
 BASE_URL = "https://yourdomain.com"
 API_URL = "/api/v1"
