--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
             context: .
             args:
                 MAIL_CONTACT_EMAIL: contact@fitnessproviders.net
-                GOOGLE_MAP_API: AIzaSyDqFL-tMUQap9MktoHDvASzNXgfW9SPtgU
+                GOOGLE_MAP_API: YOUR_API_KEY
         image: fitness
         container_name: fitness
         ports:
