--- a/Infrastructure/terraform/credentials.auto.tfvars.example
+++ b/Infrastructure/terraform/credentials.auto.tfvars.example
@@ -1,7 +1,10 @@
+GRAFANA_DOMAIN = "grafana"
+GRAFANA_PASSWORD = ""
 LETS_ENCRYPT_STAGING = false
 FITNESS_REPLICA_COUNT = 3
 MONGO_VOLUME_SIZE = "10Gi"
 MONGO_REPLICA_COUNT = 2
+MONGO_REPLICA_KEY = ""
 MINIO_VOLUME_SIZE = "10Gi"
 MINIO_REPLICA_COUNT = 1 # Must equal 1 or >= 4
 LINODE_TOKEN = ""
