--- a/Infrastructure/terraform/credentials.auto.tfvars.example
+++ b/Infrastructure/terraform/credentials.auto.tfvars.example
@@ -3,7 +3,7 @@ GRAFANA_PASSWORD = ""
 LETS_ENCRYPT_STAGING = false
 FITNESS_REPLICA_COUNT = 3
 MONGO_VOLUME_SIZE = "10Gi"
-MONGO_REPLICA_COUNT = 2
+MONGO_REPLICA_COUNT = 1
 MONGO_REPLICA_KEY = ""
 MINIO_VOLUME_SIZE = "10Gi"
 MINIO_REPLICA_COUNT = 1 # Must equal 1 or >= 4
@@ -30,7 +30,7 @@ MAIL_CONTACT_EMAIL = "contact@yourdomain.com"
 GOOGLE_MAP_API = ""
 GOOGLE_PLACE_API = ""
 PROVIDER_TYPE = "fitness"
-DB_CONNECTION_STRING = "mongodb://<username>:<password>@mongodb-0.mongodb-headless.fitness.svc.cluster.local:27017,mongodb-1.mongodb-headless.fitness.svc.cluster.local:27017/fitness-providers?authSource=admin"
+DB_CONNECTION_STRING = "mongodb://<username>:<password>@mongodb.fitness.svc.cluster.local:27017/fitness-providers?authSource=admin"
 SECRET = ""
 REFRESH_TOKEN_SECRET = ""
 ACCESS_TOKEN_SECRET = ""
