tf: paypal conf

--- a/Infrastructure/terraform/credentials.auto.tfvars.example
+++ b/Infrastructure/terraform/credentials.auto.tfvars.example
@@ -24,6 +24,10 @@ MAIL_POSTMASTER = "postmaster@yourdomain.com"
 MAIL_POSTMASTER_PASSWORD = ""
 MAIL_FROM_EMAIL = "noreply@yourdomain.com"
 MAIL_CONTACT_EMAIL = "contact@yourdomain.com"
+PAYPAL_API_URL = "https://api-m.sandbox.paypal.com/v1"
+PAYPAL_PLAN_ID = ""
+PAYPAL_CLIENT_ID = ""
+PAYPAL_SECRET = ""
 GOOGLE_MAP_API = ""
 GOOGLE_PLACE_API = ""
 PROVIDER_TYPE = "fitness"
