--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -365,7 +365,7 @@ stop_main:
     script:
         - docker stop $DOCKER_NAME
         - docker rm $DOCKER_NAME
-        - 'curl -s --location --request POST "http://10.0.0.175:5000/delete" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "subdomain=$SUBDOMAIN" --data-urlencode "branch=$CI_COMMIT_BRANCH"'
+        # - 'curl -s --location --request POST "http://10.0.0.175:5000/delete" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "subdomain=$SUBDOMAIN" --data-urlencode "branch=$CI_COMMIT_BRANCH"'
 
 deploy_staging:
     stage: deploy
@@ -426,7 +426,7 @@ stop_staging:
     script:
         - docker stop $DOCKER_NAME
         - docker rm $DOCKER_NAME
-        - 'curl -s --location --request POST "http://10.0.0.175:5000/delete" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "subdomain=$SUBDOMAIN" --data-urlencode "branch=$CI_COMMIT_BRANCH"'
+        # - 'curl -s --location --request POST "http://10.0.0.175:5000/delete" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "subdomain=$SUBDOMAIN" --data-urlencode "branch=$CI_COMMIT_BRANCH"'
 
 deploy_dev:
     stage: deploy
@@ -487,7 +487,7 @@ stop_dev:
     script:
         - docker stop $DOCKER_NAME
         - docker rm $DOCKER_NAME
-        - 'curl -s --location --request POST "http://10.0.0.175:5000/delete" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "subdomain=$SUBDOMAIN" --data-urlencode "branch=$CI_COMMIT_BRANCH"'
+        # - 'curl -s --location --request POST "http://10.0.0.175:5000/delete" --header "Content-Type: application/x-www-form-urlencoded" --data-urlencode "subdomain=$SUBDOMAIN" --data-urlencode "branch=$CI_COMMIT_BRANCH"'
 
 deploy_branch:
     stage: deploy
