--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -542,7 +542,7 @@ stop_dev:
         on_stop: stop_branch
         auto_stop_in: 5 days
 
-stop_branch:
+.stop_branch:
     stage: deploy
     allow_failure: true
     tags:
