--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@types/validator": "^13.7.14",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^29.5.0",
     "concurrency": "^0.1.4",
     "concurrently": "^7.6.0",
     "copyfiles": "^2.4.1",
@@ -55,11 +55,11 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "faker": "^5.5.3",
-    "jest": "26.6.3",
+    "jest": "^29.5.0",
     "jest-junit": "^15.0.0",
     "nodemon": "^2.0.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^26.5.6",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
